# pricemon

./: .env.example  .gitignore  Containerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: agent-skills.md  deployment.md  source-compendium.md
src/pricemon/: __init__.py  __main__.py  config.py  filters.py  models.py  monitor.py  rss.py  storage.py  telegram.py
tests/: test_config.py  test_filters.py  test_storage.py
