[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pricemon"
version = "0.1.0"
description = "Lightweight RSS-to-Telegram monitor for PC parts deals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = []

[project.scripts]
pricemon = "pricemon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]